@@ -1,3 +1,9 @@
+2003-03-19  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* libutil++/op_bfd.cpp: correct get_vma_range()
+
+	* pp/oprofpp.cpp: do_dump_gprof() this time it's right!
+
 2003-03-18  John Levon  <levon@movementarian.org>
 
 	* pp/profile.cpp: improve mtime warning for 2.5 modules
@@ -17,7 +23,7 @@
 
 2003-03-18  Philippe Elie  <phil.el@wanadoo.fr>
 
-	* TOODO: update
+	* TODO: update
 
 	* pp/derive_files.cpp: special to retrieve 2.5 module
 
